@@ -1,3 +1,7 @@
+2003-04-17    <johan@balder>
+
+	* src/mcs51/ralloc.c (packRegisters): fixed bug #720667
+
 2003-04-13  Borut Razem <borut.razem@siol.net>
 
 	* doc/sdccman.lyx: updated info about #pragma SAVE/RESTORE nesting
